# arduino-pico-rp2350

./: .gitignore  .gitmodules  README.md  boards.txt  platform.txt
cores/: rp2350
cores/rp2040/: Arduino.h  PIOProgram.cpp  RP2040Support.h  RP2040USB.cpp  SerialUART.h  main.cpp
cores/rp2040/sdkoverride/: tusb_absmouse.h
cores/rp2350/: Arduino.h  PIOProgram.cpp  RP2040Support.h  SerialUART.h  wiring_analog.cpp
include/: tusb_config.h
include/pico_base/pico/: version.h
lib/: platform_inc.txt
lib/cortex-m0plus/: core_inc.txt
lib/cortex-m33/: core_inc.txt  memmap_default.ld  platform_inc.txt
lib/rp2040/: platform_inc.txt
lib/rp2350/: platform_inc.txt
libraries/HID_Bluetooth/src/: HID_Bluetooth.cpp
libraries/SPI/: library.properties
libraries/SPI/src/: SPI.cpp
libraries/Wire/src/: Wire.cpp
ota/: make-ota.sh  ota_clocks.c
package/: package_pico_index.template.json
pico-sdk/: .gitignore  .gitmodules  CMakeLists.txt  COMPATIBILITY.md  NOTES.md  README.md  TODO.md  pico_sdk_version.cmake
pico-sdk/cmake/: pico_pre_load_toolchain.cmake
pico-sdk/src/: CMakeLists.txt  rp2040.cmake  rp2350-riscv.cmake  rp2350.cmake  rp2_common.cmake
pico-sdk/src/common/: CMakeLists.txt
pico-sdk/src/rp2040/: CMakeLists.txt
pico-sdk/src/rp2350/: CMakeLists.txt  README.md
pico-sdk/src/rp2_common/: CMakeLists.txt
pico-sdk/src/rp2_common/pico_multicore/: CMakeLists.txt  multicore.c
pico-sdk/src/rp2_common/pico_rand/: CMakeLists.txt  rand_hardware.c
pico-sdk/test/hardware_pwm_test/: hardware_pwm_test.c
pico-sdk/test/kitchen_sink/: CMakeLists.txt  kitchen_sink.c
pico-sdk/test/pico_divider_test/: pico_divider_nesting_test.c  (+1 more)
pico-sdk/tools/: CMakeLists.txt
tools/: makeboards.py
tools/json/: challenger_2040_wifi_ble.json  challenger_2350_bconnect.json  challenger_2350_wifi6_ble5.json  challenger_2350_wifi_ble.json  challenger_2350_wifi_ble_espat.json  challenger_2350_wifi_ble_esphost.json
tools/libpico/: CMakeLists.txt  make-libpico.sh
tools/libpico-rp2040/: CMakeLists.txt  make-libpico.sh
tools/libpico-rp2350/: CMakeLists.txt  make-libpico.sh
variants/challenger_2040_wifi_ble/: board_init.cpp  pins_arduino.h
variants/challenger_2350_bconnect/: board_init.cpp
variants/challenger_2350_wifi6_ble5/: board_init.cpp
variants/challenger_2350_wifi_ble/: board_init.cpp  pins_arduino.h
variants/connectivity_2040_lte_wifi_ble/: Connectivity.cpp  Connectivity.h
(+204 files in other folders)
